Model is trained, saved and load. quickstart.ipynb is completed.

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +248,258 @@
    "source": [
     "loss_fn = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a single training loop, the model makes predictions on the training dataset (fed to it in batches), and backpropagates the prediction error to adjust the model's parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(dataloader, model, loss_fn, optimizer):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    model.train()\n",
+    "    for batch, (X, y) in enumerate(dataloader):\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "\n",
+    "        # Compute prediction error\n",
+    "        pred = model(X)\n",
+    "        loss = loss_fn(pred, y)\n",
+    "\n",
+    "        # Backpropagation\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        if batch % 100 == 0:\n",
+    "            loss, current = loss.item(), (batch + 1) * len(X)\n",
+    "            print(f\"loss: {loss:>7f} [{current:>5d}|{size:>5d}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# method for testing the trained model\n",
+    "def test(dataloader, model, loss_fn):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    num_batches = len(dataloader)\n",
+    "    model.eval()\n",
+    "    test_loss, correct = 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in dataloader:\n",
+    "            X, y = X.to(device), y.to(device)\n",
+    "            pred = model(X)\n",
+    "            test_loss += loss_fn(pred, y).item()\n",
+    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>.8f} \\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a typical process, each batches of data goes through several iterations (epochs) in the neural network. The purpose here to make model learns by adjusting the parameters to make better predictions. To know whether model is making correct prediction is based on loss function values, the model aims is to reduce the loss value. We can observe the model accuracy and loss at each epoch and we would like to see the accuracy increase and the loss decrease with every epoch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      " -------------------------------------------------\n",
+      "loss: 2.303051 [   64|60000]\n",
+      "loss: 2.295276 [ 6464|60000]\n",
+      "loss: 2.277853 [12864|60000]\n",
+      "loss: 2.276852 [19264|60000]\n",
+      "loss: 2.246889 [25664|60000]\n",
+      "loss: 2.219332 [32064|60000]\n",
+      "loss: 2.236468 [38464|60000]\n",
+      "loss: 2.195301 [44864|60000]\n",
+      "loss: 2.206052 [51264|60000]\n",
+      "loss: 2.164716 [57664|60000]\n",
+      "Test Error: \n",
+      " Accuracy: 36.0%, Avg loss: 2.16628930 \n",
+      "\n",
+      "Epoch 2\n",
+      " -------------------------------------------------\n",
+      "loss: 2.176670 [   64|60000]\n",
+      "loss: 2.173671 [ 6464|60000]\n",
+      "loss: 2.122136 [12864|60000]\n",
+      "loss: 2.136147 [19264|60000]\n",
+      "loss: 2.082084 [25664|60000]\n",
+      "loss: 2.025294 [32064|60000]\n",
+      "loss: 2.056125 [38464|60000]\n",
+      "loss: 1.978423 [44864|60000]\n",
+      "loss: 1.995018 [51264|60000]\n",
+      "loss: 1.908728 [57664|60000]\n",
+      "Test Error: \n",
+      " Accuracy: 52.3%, Avg loss: 1.91812415 \n",
+      "\n",
+      "Epoch 3\n",
+      " -------------------------------------------------\n",
+      "loss: 1.955384 [   64|60000]\n",
+      "loss: 1.931765 [ 6464|60000]\n",
+      "loss: 1.823907 [12864|60000]\n",
+      "loss: 1.847648 [19264|60000]\n",
+      "loss: 1.745743 [25664|60000]\n",
+      "loss: 1.694981 [32064|60000]\n",
+      "loss: 1.707978 [38464|60000]\n",
+      "loss: 1.611273 [44864|60000]\n",
+      "loss: 1.639238 [51264|60000]\n",
+      "loss: 1.515792 [57664|60000]\n",
+      "Test Error: \n",
+      " Accuracy: 59.4%, Avg loss: 1.54619356 \n",
+      "\n",
+      "Epoch 4\n",
+      " -------------------------------------------------\n",
+      "loss: 1.617806 [   64|60000]\n",
+      "loss: 1.584425 [ 6464|60000]\n",
+      "loss: 1.437864 [12864|60000]\n",
+      "loss: 1.492393 [19264|60000]\n",
+      "loss: 1.381061 [25664|60000]\n",
+      "loss: 1.371631 [32064|60000]\n",
+      "loss: 1.377521 [38464|60000]\n",
+      "loss: 1.304199 [44864|60000]\n",
+      "loss: 1.339054 [51264|60000]\n",
+      "loss: 1.227687 [57664|60000]\n",
+      "Test Error: \n",
+      " Accuracy: 63.4%, Avg loss: 1.26408959 \n",
+      "\n",
+      "Epoch 5\n",
+      " -------------------------------------------------\n",
+      "loss: 1.344311 [   64|60000]\n",
+      "loss: 1.326736 [ 6464|60000]\n",
+      "loss: 1.164055 [12864|60000]\n",
+      "loss: 1.258207 [19264|60000]\n",
+      "loss: 1.137810 [25664|60000]\n",
+      "loss: 1.160979 [32064|60000]\n",
+      "loss: 1.175103 [38464|60000]\n",
+      "loss: 1.117042 [44864|60000]\n",
+      "loss: 1.153015 [51264|60000]\n",
+      "loss: 1.062704 [57664|60000]\n",
+      "Test Error: \n",
+      " Accuracy: 65.0%, Avg loss: 1.09157750 \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 5\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n -------------------------------------------------\")\n",
+    "    train(train_dataloader, model, loss_fn, optimizer)\n",
+    "    test(test_dataloader, model, loss_fn)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Saving Models\n",
+    "\n",
+    "A common way to save a model is to serialize internal state dictionary containing the model parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Pytorch model state to model.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.save(model.state_dict(), \"model.pth\")\n",
+    "print(\"Saved Pytorch model state to model.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Loading Models\n",
+    "The process for loading a model includes re-creating the model structure and loading the state dictionary into it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = NeuralNetwork().to(device)\n",
+    "model.load_state_dict(torch.load(\"model.pth\", weights_only=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prediction code\n",
+    "classes = [\n",
+    "    \"T-shirt/top\",\n",
+    "    \"Trouser\",\n",
+    "    \"Pullover\",\n",
+    "    \"Dress\",\n",
+    "    \"Coat\",\n",
+    "    \"Sandal\",\n",
+    "    \"Shirt\",\n",
+    "    \"Sneaker\",\n",
+    "    \"Bag\",\n",
+    "    \"Ankle boot\",\n",
+    "]\n",
+    "model.eval()\n",
+    "x, y = test_data[0][0], test_data[0][1]\n",
+    "with torch.no_grad():\n",
+    "    x = x.to(device)\n",
+    "    pred = model(x)\n",
+    "    predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
+    "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
    ]
   },
   {
