Complete Tensors and DataLoaders lesson

--- a/Tensor.ipynb
+++ b/Tensor.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +71,8 @@
       "        [1, 1]]) \n",
       "\n",
       "Random Tensor: \n",
-      " tensor([[0.8931, 0.0351],\n",
-      "        [0.5326, 0.3696]]) \n",
+      " tensor([[0.3841, 0.9692],\n",
+      "        [0.4313, 0.4646]]) \n",
       "\n"
      ]
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +99,8 @@
      "output_type": "stream",
      "text": [
       "Random Tensor: \n",
-      " tensor([[0.0822, 0.6411, 0.6127],\n",
-      "        [0.2353, 0.3900, 0.5893]]) \n",
+      " tensor([[0.5911, 0.2783, 0.9622],\n",
+      "        [0.0682, 0.6857, 0.5317]]) \n",
       "\n",
       "Ones Tensor: \n",
       " tensor([[1., 1., 1.],\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,271 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operations on Tensors"
+    "## Operations on Tensors\n",
+    "\n",
+    "There are over 1200 tensor operations, including arithmetic, linear algebra, matrix manipulation (transposing, indexing, slicing), sampling and more.\n",
+    "\n",
+    "Each of these operations can be run on the CPU and Accelerator such as CUDA, MPS, MTIA, or XPU.\n",
+    "\n",
+    "By default, tensors are created on the CPU. We need to explicitly move tensors to the accelerator using .to method (after checking for accelerator availability). Keep in mind that copying large tensors across devices can be expensive in terms of time and memory!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First row: tensor([1., 1., 1., 1.])\n",
+      "First column: tensor([1., 1., 1., 1.])\n",
+      "Last column: tensor([1., 1., 1., 1.])\n",
+      "tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Standard numpy-like indexing and slicing\n",
+    "\n",
+    "tensor = torch.ones(4,4)\n",
+    "print(f\"First row: {tensor[0]}\")\n",
+    "print(f\"First column: {tensor[:, 0]}\")\n",
+    "print(f\"Last column: {tensor[..., -1]}\")\n",
+    "tensor[:, 1] = 0\n",
+    "print(tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Joining tensors: we can use torch.cat to concatenate a sequence of tensors along a given dimension.\n",
+    "t1 = torch.cat([tensor, tensor, tensor], dim=1)\n",
+    "print(t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.]])\n",
+      "tensor([[3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.]])\n",
+      "tensor([[3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arithmetic operations\n",
+    "# This computes the matrix multiplication between two tensors. y1, y2, y3 will have the same value\n",
+    "# 'tensor.T' returns the transpose of a tensor\n",
+    "\n",
+    "y1 = tensor @ tensor.T\n",
+    "y2 = tensor.matmul(tensor.T)\n",
+    "\n",
+    "y3 = torch.rand_like(y1)\n",
+    "torch.matmul(tensor, tensor.T, out=y3)\n",
+    "\n",
+    "print(y1)\n",
+    "print(y2)\n",
+    "print(y3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this computes the element-wise product. z1, z2, z3 will have the same value\n",
+    "z1 = tensor * tensor\n",
+    "z2 = tensor.mul(tensor)\n",
+    "z3 = torch.rand_like(tensor)\n",
+    "torch.mul(tensor, tensor, out=z3)\n",
+    "\n",
+    "print(z1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Single-element tensors\n",
+    "# If you have a one-element tensor, for example by aggregating all values of a tensor into one value, you can convert\n",
+    "# it to a Python numerical value using item()\n",
+    "\n",
+    "agg = tensor.sum()\n",
+    "agg_item = agg.item()\n",
+    "print(agg_item, type(agg_item))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]]) \n",
+      "\n",
+      "tensor([[6., 5., 6., 6.],\n",
+      "        [6., 5., 6., 6.],\n",
+      "        [6., 5., 6., 6.],\n",
+      "        [6., 5., 6., 6.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In-place operations: Operations that store the result into the operand are called in-place. They are denoted by a '_' \n",
+    "# suffix. for eg.: x.copy_(y), x.t_(), will change x\n",
+    "\n",
+    "# Note: in-place operations save some memory, but can be problematic when computing derivatives because of an immediate\n",
+    "# loss of history. Hence, their use is discouraged.\n",
+    "\n",
+    "print(f\"{tensor} \\n\")\n",
+    "tensor.add_(5)\n",
+    "print(tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bridge with NumPy\n",
+    "\n",
+    "Tensors on the CPU and NumPy arrays can share their underlying memory locations, and changing one will change the other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([1., 1., 1., 1., 1.])\n",
+      "n [1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tensor to NumPy array\n",
+    "t = torch.ones(5)\n",
+    "print(f\"t: {t}\")\n",
+    "n = t.numpy()\n",
+    "print(f\"n: {n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([2., 2., 2., 2., 2.])\n",
+      "n: [2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A change in the tensor reflects in the NumPy array\n",
+    "t.add_(1)\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NumPy array to Tensor\n",
+    "n = np.ones(5)\n",
+    "t = torch.from_numpy(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n",
+      "n: [2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# changes in the NumPy array reflects in the tensor\n",
+    "np.add(n, 1, out=n)\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
    ]
   },
   {
